kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brigade
spec:
  selector:
    app: brigade
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
