kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brigade
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - brigade.djnd.si
        - brigade.danesjenovdan.si
      secretName: brigade-tls
  rules:
    - host: brigade.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brigade
                port:
                  number: 80
    - host: brigade.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brigade
                port:
                  number: 80
